<?xml version="1.0" encoding="utf-8"?>
<layout
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
xmlns:android="http://schemas.android.com/apk/res/android"
    >

<data>
    <variable
        name="viewModel"
        type="com.example.mystorage.mvvm.item.viewmodel.itemUpdate.ItemUpdateViewModel" />
</data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".mvvm.item.view.itemUpdate.ItemUpdateFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/itemUpdateBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_baseline_navigate_before_24"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/정보수정"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="23dp"
        android:text="@string/물건이름"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        android:text="@string/물건구매처"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemNameUpdate" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        android:text="@string/물건사진"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemStoreUpdate" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        android:text="@string/물건위치"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemImageUpdate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        android:text="@string/물건수량"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemPlaceUpdate" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/itemNameUpdate"
        android:layout_width="342dp"
        android:layout_height="49dp"
        android:layout_marginTop="47dp"
        android:background="@drawable/bolder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/box"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/itemNameUpdateEdit"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:background="@null"
            android:hint="@string/물건이름입력"
            app:addTextChangedListener="@{viewModel.itemnameUpdateTextWatcher}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/itemStoreUpdate"
        android:layout_width="342dp"
        android:layout_height="49dp"
        android:layout_marginTop="39dp"
        android:background="@drawable/bolder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemNameUpdate">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/box"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/iteStoreUpdateEdit"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:background="@null"
            android:hint="@string/물건구매처입력"
            app:addTextChangedListener="@{viewModel.itemstoreUpdateTextWatcher}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/itemImageUpdate"
        android:layout_width="342dp"
        android:layout_height="100dp"
        android:layout_marginTop="39dp"
        android:background="@drawable/bolder"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemStoreUpdate">

        <ImageView
            android:id="@+id/itemImageUpdateView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/item_image_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/itemPlaceUpdate"
        android:layout_width="342dp"
        android:layout_height="49dp"
        android:layout_marginTop="39dp"
        android:background="@drawable/bolder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemImageUpdate">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/box"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/itemPlaceUpdateSpinner"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/itemCountUpdate"
        android:layout_width="342dp"
        android:layout_height="70dp"
        android:layout_marginTop="39dp"
        android:background="@drawable/bolder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemPlaceUpdate">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/minusUpdateBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:foreground="@drawable/ic_baseline_remove_24"
            android:background="@drawable/bolder"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/itemCountUpdateEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="1"
            android:maxLength="4"
            android:textSize="30sp"
            android:inputType="number"
            app:addTextChangedListener="@{viewModel.itemcountUpdateTextWatcher}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/plusUpdateBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/ic_baseline_add_24"
            android:background="@drawable/bolder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/itemUpdateBtn"
        style="@style/MaterialButtonStyle"
        android:layout_width="342dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/brown_background_bolder"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/물건정보수정하기"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemCountUpdate" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
